Fix main menu toggler so it works on small screens

--- a/app/assets/stylesheets/arclight/modules/mastheads.scss
+++ b/app/assets/stylesheets/arclight/modules/mastheads.scss
@@ -39,5 +39,17 @@
     .active a {
       color: $gray;
     }
+
+    // TODO: remove this after figuring out why the default toggler icon is not displaying
+    .navbar-toggler {
+      background: #ccc;
+    }
+  }
+
+  @media (max-width: 992px) {
+    h1,
+    + .navbar-search {
+      text-align: center;
+    }
   }
 }
